fix: flex-wrap in section-share

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -726,6 +726,7 @@ header {
 
 .section-share {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 20px;
